# django_base_app

./: db.sqlite3  main.py  pyproject.toml
apps/tests/: views.py
backend_config/: settings.py  urls.py  views.py
tests/: urls.py
